# generic-linked-list

./: CMakeLists.txt  README.md
src/: consumers.c  consumers.h  list.c  list.h  main.c
test/: list-test.c  test-framework.c  test-framework.h
